--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #f1c40f
+    background-color: #2c3e50
 }
 
 h1{
@@ -23,7 +23,7 @@ h1{
 }
 
 table{
-    background-color: #e74c3c;
+    background-color: #d35400;
     border-radius:10px;
     padding:10px;
 }
@@ -39,7 +39,7 @@ table{
 }
 
 input[type=button]{
-    background-color: yellow;
+    background-color:#e67e22 ;
     height: 50px;
     width: 50px;
     font-size: 1em;
